vikunja/02_deployment_vikunja.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: vikunja
  labels:
    app: vikunja
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      containers:
        - name: vikunja-api
          image: "vikunja/api:latest"
          imagePullPolicy: IfNotPresent
          ports:
          - name: api
            protocol: TCP
            containerPort: 3456
          volumeMounts:
          - name: pv-volume
            mountPath: "/app/vikunja/vikunja.db"
            subPath: "vikunja.db"
        - name: frontend
          image: vikunja/frontend
          imagePullPolicy: IfNotPresent
          ports:
          - name: web
            protocol: TCP
            containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
      volumes:
        - name: pv-volume
          hostPath:
            path: "/opt/vikunja/data"
