vikunja/03_service_vikunja.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace:  vikunja
  labels:
    app: vikunja
spec:
  ports:
    - port: 8083
      targetPort: 80
      protocol: TCP
      name: web
    - port: 3456
      targetPort: 3456
      protocol: TCP
      name: api
  type: NodePort
  selector:
    app: vikunja
