vikunja/04_ingress_vikunja.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vikunja
  namespace: vikunja
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - vikunja.danielbeltejar.es
      secretName: letsencrypt
  rules:
  - host: vikunja.danielbeltejar.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vikunja
            port: 
              number: 8083
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: vikunja
            port:
              number: 3456
